--- a/SAILearningWeb/levels/templates/levels/level.html
+++ b/SAILearningWeb/levels/templates/levels/level.html
@@ -17,7 +17,7 @@
         </div>
 
         <a class="header-dropdown" onclick="myFunctin()">
-            <span class="user-info">Miguel Pérez<br>Nivel 2</span>
+            <span class="user-info">{{user.username}}<br>Nivel 2</span>
             <img href="{% static 'images/Asset 26@4x.png' %}" class="profile-picture">
             <div class="dropdownLink" id="ddl">
                 <a>Perfil</a>
