--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -19,7 +19,7 @@
 
 
       <a class="header-dropdown" onclick="myFunctin()">
-        <span class="user-info">{{user.username}}<br>Nivel 2</span>
+        <span class="user-info">{{user.username}}<br>{{perfil.nivel}}</span>
         <img src="./assets/Asset 26@4x.png" class="profile-picture"">
         <div class="dropdownLink" id="ddl">
           <a>Perfil</a>
