--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -48,13 +48,15 @@
 
     <main>
 
-        <div class="horizontal-scroll-wrapper squares">
-        <a href="{% url 'levels:level' %}" class="active">1</a>
-        <a class="active">2</a>
-        <a class="active">3</a>
-        <a class="active">4</a>
-        <a class="active">5</a>
-        <a class="select">6</a>
+      <div class="horizontal-scroll-wrapper squares">
+        <!-- a class="active" href="{% url 'levels:level' %}"> Clase Amarilla </a -->
+        <!-- a class="select" href="{% url 'levels:level' %}"> Clase Naranja </a -->
+        <a>1</a>
+        <a>2</a>
+        <a>3</a>
+        <a>4</a>
+        <a>5</a>
+        <a>6</a>
         <a>7</a>
         <a>8</a>
         <a>9</a>
