Editado el css de app

--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -13,38 +13,23 @@
 
     <header>
 
-      <div class="header-logo">
+      <a class="header-logo"">
         <span class="bold">SAI</span>Learning
-      </div>
+      </a>
 
 
       <a class="header-dropdown" onclick="myFunctin()">
         <span class="user-info">{{user.username|title}}<br>Nivel {{perfil.nivel}}</span>
         <img src="{% static 'images/Asset 26@4x.png' %}" class="profile-picture">
         <div class="dropdownLink" id="ddl">
-          <a>Perfil</a>
-          <a>Glosario</a>
-          <a>Cerrar Sesión</a>
+          <a class="dropdownLink-button">Perfil</a>
+          <a class="dropdownLink-button">Glosario</a>
+          <a class="dropdownLink-button">Cerrar Sesión</a>
         </div>
       </a>
     </header>
 
-    <script>
-      let contador = 0;
-      function myFunctin(){
-        contador++
-        let Elemento = document.getElementById("ddl");
-        if(contador%2 == 0){
-          
-          console.log(Elemento);
-          Elemento.style.display = "none";
-        }
-        else {
-          Elemento.style.display = "block";
-        }
-        
-      }
-    </script>
+    <script src="{% static 'app.js' %}"></script>
 
     <main>
 
