--- a/SAILearningWeb/static/app.css
+++ b/SAILearningWeb/static/app.css
@@ -44,6 +44,7 @@ main {
   text-align: right;
   display: flex;
   align-items: center;
+  cursor: pointer;
 
 }
 .header-dropdown:hover {
@@ -69,6 +70,11 @@ main {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  cursor: pointer;
+}
+
+.dropdownLink-button:hover {
+  background-color: white;
 }
 
 
