--- a/SAILearningWeb/perfiles/templates/perfiles/index.html
+++ b/SAILearningWeb/perfiles/templates/perfiles/index.html
@@ -19,23 +19,27 @@
     </menu>
     <main>
       <div class="banner">
-        <h1>Aprende lengua de señas</h1>
-        <p>Utilizando el poder de inteligencia artificial. Rápido. Interactivo. Sencillo.</p>
+        <div>
+          <h1>Aprende lengua de señas</h1>
+          <p>Utilizando el poder de inteligencia artificial. Rápido. Interactivo. Sencillo.</p>
+        </div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/E85Em8CPPvk?si=MKKfnWVXelhYKOtc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-      <h2>¿Cómo funciona?</h2>
-      <p>SAI Learn es una plataforma de aprendizaje de lengua de señas que utiliza inteligencia artificial para enseñarte de manera rápida y sencilla. Solo necesitas una cámara y conexión a internet.</p>
-      <div class="steps">
+      <div class="info">
+        <h2>¿Cómo funciona?</h2>
+        <p>SAI Learn es una plataforma de aprendizaje de lengua de señas que utiliza inteligencia artificial para enseñarte de manera rápida y sencilla. Solo necesitas una cámara y conexión a internet.</p>
+      </div>
+      <!--<div class="steps">
         <div class="step">
           <img>
         </div>
-      </div>
-      <div>
+      </div>-->
+      <div class="info">
         <h2>¿Por qué aprender lengua de señas?</h2>
         <p>La lengua de señas es un lenguaje visual y gestual utilizado por personas sordas y con discapacidad auditiva para comunicarse. Aprender lengua de señas te permite comunicarte con personas sordas y con discapacidad auditiva, y contribuir a la inclusión y accesibilidad de la comunidad sorda.</p>
       </div>
-      <div>
+      <div class="info">
         <h2>¿Quiénes somos?</h2>
         <p>Somos un equipo de desarrolladores y diseñadores apasionados por la tecnología y la inclusión. Creemos en el poder de la tecnología para transformar la educación y la accesibilidad, y estamos comprometidos en hacer de SAI Learn una plataforma de aprendizaje de lengua de señas accesible y efectiva.</p>
       </div>
