--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -36,7 +36,7 @@
       <div class="horizontal-scroll-wrapper squares">
         <!-- a class="active" href="{% url 'levels:level' %}"> Clase Amarilla </a -->
         <!-- a class="select" href="{% url 'levels:level' %}"> Clase Naranja </a -->
-        <a>1</a>
+        <a href="{% url 'levels:level' %}">1</a>
         <a>2</a>
         <a>3</a>
         <a>4</a>
