--- a/SAILearningWeb/levels/templates/levels/level.html
+++ b/SAILearningWeb/levels/templates/levels/level.html
@@ -16,6 +16,8 @@
             <span class="bold">SAI</span>Learning
         </div>
 
+        <h1>Nivel {{perfil.nivel}}</h1>
+
         <a class="header-dropdown" onclick="myFunctin()">
             <span class="user-info">{{user.username|title}}<br>Nivel {{perfil.nivel}}</span>
             <img href="{% static 'images/Asset 26@4x.png' %}" class="profile-picture">
@@ -44,13 +46,13 @@
 
             <div class="right-container">
                 <div class="semaforo"></div>
-                <br>
+                
                 <div class="semaforo"></div> 
-                <br>
+                
                 <div class="semaforo"></div> 
-                <br>
+                
                 <div class="semaforo"></div>
-                <br>
+                
                 <div class="semaforo"></div>         
         </div>
 
