--- a/SAILearningWeb/static/level.css
+++ b/SAILearningWeb/static/level.css
@@ -40,7 +40,7 @@ main {
     width: 50px;
     height: 50px;
     margin: 0 auto;
-    background-color: #4C4997;
+    background-color: #515151;
 }
 .semaforo-terminado {
     background-color: #08AE63;
