--- a/SAILearningWeb/perfiles/templates/perfiles/index.html
+++ b/SAILearningWeb/perfiles/templates/perfiles/index.html
@@ -28,7 +28,11 @@
     <div>
       <div class="info">
         <h2>¿Cómo funciona?</h2>
-        <p>SAI Learn es una plataforma de aprendizaje de lengua de señas que utiliza inteligencia artificial para enseñarte de manera rápida y sencilla. Solo necesitas una cámara y conexión a internet.</p>
+        <p>
+          SAI Learning es una plataforma de aprendizaje de lengua de señas
+          que utiliza inteligencia artificial para enseñarte de manera rápida
+          y sencilla. Solo necesitas una cámara y conexión a internet.
+        </p>
       </div>
       <!--<div class="steps">
         <div class="step">
@@ -37,11 +41,28 @@
       </div>-->
       <div class="info">
         <h2>¿Por qué aprender lengua de señas?</h2>
-        <p>La lengua de señas es un lenguaje visual y gestual utilizado por personas sordas y con discapacidad auditiva para comunicarse. Aprender lengua de señas te permite comunicarte con personas sordas y con discapacidad auditiva, y contribuir a la inclusión y accesibilidad de la comunidad sorda.</p>
+        <p>
+          En méxico más de 2.3 millones de personas padecen una 
+          discapacidad auditiva, sin embargo solamente 300 mil personas
+          pueden comunicarse físicamente a través de la lengua de señas
+          mexicana (LSM) 
+          La lengua de señas es un lenguaje visual y gestual utilizado
+          por personas con discapacidades auditivas para comunicarse entre
+          sí, y con personas oyentes.
+          Aprender lengua de señas no solo te permitirá comunicarte con
+          este grupo de personas, sino que ayudas a tu comunidad a convertirse
+          en un espacio más inclusivo para todas las personas.
+        </p>
       </div>
       <div class="info">
         <h2>¿Quiénes somos?</h2>
-        <p>Somos un equipo de desarrolladores y diseñadores apasionados por la tecnología y la inclusión. Creemos en el poder de la tecnología para transformar la educación y la accesibilidad, y estamos comprometidos en hacer de SAI Learn una plataforma de aprendizaje de lengua de señas accesible y efectiva.</p>
+        <p>
+          Somos un equipo de desarrolladores y diseñadores apasionados por la
+          tecnología y la inclusión. Creemos en el poder de la tecnología para
+          transformar la educación y la accesibilidad, y estamos comprometidos
+          en hacer de SAI Learn una plataforma de aprendizaje de lengua de señas
+          accesible y efectiva.
+        </p>
       </div>
       <div>
         <h2>¿Qué dicen nuestros usuarios?</h2>
@@ -66,9 +87,6 @@
       
     </main>
     <footer>
-      Sai Learning
-      Todos los derechos reservados
-      Términos y Condiciones
     </footer>
 
   </body>
