--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -34,38 +34,17 @@
     <main>
 
       <div class="horizontal-scroll-wrapper squares">
-        <!-- a class="active" href="{% url 'levels:level' %}"> Clase Amarilla </a -->
-        <!-- a class="select" href="{% url 'levels:level' %}"> Clase Naranja </a -->
-        <a href="{% url 'levels:level' %}">1</a>
-        <a>2</a>
-        <a>3</a>
-        <a>4</a>
-        <a>5</a>
-        <a>6</a>
-        <a>7</a>
-        <a>8</a>
-        <a>9</a>
-        <a>10</a>
-        <a>11</a>
-        <a>12</a>
-        <a>13</a>
-        <a>14</a>
-        <a>15</a>
-        <a>16</a>
-        <a>17</a>
-        <a>18</a>
-        <a>19</a>
-        <a>20</a>
-        <a>21</a>
-        <a>22</a>
-        <a>23</a>
-        <a>24</a>
-        <a>25</a>
-        <a>26</a>
-        <a>27</a>
-        <a>28</a>
-        <a>29</a>
-        <a>30</a>
+        {% for nivel in niveles %}
+          {% if nivel <= nivel_actual %}
+              {% if nivel == nivel_actual %}
+                  <a class="select" href="{% url 'levels:level' nivel %}">{{ nivel }}</a>
+              {% else %}
+                  <a class="active" href="{% url 'levels:level' nivel %}">{{ nivel }}</a>
+              {% endif %}
+          {% else %}
+              <a>{{ nivel }}</a>
+          {% endif %}
+{% endfor %}
       </div>
 
       <a class="btn-startLevel" href="https://google.com">
