--- a/SAILearningWeb/levels/templates/levels/level_2.html
+++ b/SAILearningWeb/levels/templates/levels/level_2.html
@@ -33,7 +33,7 @@
 
             <div class="left-container">
                 <div class="muestra">Muestra la letra</div>
-                <img src="{% static '/images/letrasLSM/todasLetras.png' %}" width="250px">
+                <img src="{% static '/images/letrasLSM/letra_b.png' %}" class="letras">
             </div>
 
             <div id="container">
