--- a/SAILearningWeb/levels/templates/levels/app.html
+++ b/SAILearningWeb/levels/templates/levels/app.html
@@ -13,7 +13,7 @@
 
     <header>
 
-      <a class="header-logo"">
+      <a class="header-logo">
         <span class="bold">SAI</span>Learning
       </a>
 
@@ -22,9 +22,7 @@
         <span class="user-info">{{user.username|title}}<br>Nivel {{perfil.nivel}}</span>
         <img src="{% static 'images/Asset 26@4x.png' %}" class="profile-picture">
         <div class="dropdownLink" id="ddl">
-          <a class="dropdownLink-button">Perfil</a>
-          <a class="dropdownLink-button">Glosario</a>
-          <a class="dropdownLink-button">Cerrar Sesión</a>
+          <a class="dropdownLink-button" onclick="redirectLogout()">Cerrar sesión</a>
         </div>
       </a>
     </header>
